--- a/SuperWriters/assets/css/style.css
+++ b/SuperWriters/assets/css/style.css
@@ -1,5 +1,14 @@
 
 
+
+
+.erra{
+
+
+  overflow: hidden;
+  vertical-align:center;
+}
+
 html, body * { box-sizing: border-box; font-family: 'Open Sans', sans-serif; }
 
 body {
@@ -18,12 +27,7 @@ overflow:hidden;
     url(https://dl.dropboxusercontent.com/u/22006283/preview/codepen/sky-clouds-cloudy-mountain.jpg) no-repeat center center fixed;
   background-size: cover;
 }
-.erra{
 
-  border:1px solid green; 
-  overflow: hidden;
-  vertical-align:center;
-}
 .container {
   width: 100%;
   padding-top: 60px;
@@ -58,6 +62,7 @@ overflow:hidden;
 
 .frame-long {
   height: 615px;
+  
 }
 
 .frame-short {
@@ -367,6 +372,23 @@ label {
     background: rgba(255,255,255, 1);
 
 }
+.header{
+	background: #d4dedf; 
+	border-radius: 5px;
+	padding: 5px;
+  margin-bottom:25px;
+}
+ .footer {
+	padding: 25px 30px 40px 30px;
+	overflow: auto;
+	
+	background: #d4dedf;
+	border-top: 1px solid #fff;
+	
+	box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
+	-moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
+	-webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
+}
 
 .btn-animate {
   float: left;
@@ -376,7 +398,7 @@ label {
   text-align: center;
 margin-top: 8px;
  
- margin-right: 15px;
+ margin-right: 25%;
   width: 40%;
   height: 35px;
 	border: none;
@@ -512,6 +534,13 @@ a.btn-signup:hover, a.btn-signin:hover {
 h1 {
   color: #ffffff;
   font-size: 35px;
+	font-weight: 300;
+  text-align: center;
+}
+
+h3 {
+  color: #ffffff;
+  font-size: 25px;
 	font-weight: 300;
   text-align: center;
 }
