--- a/SuperWriters/assets/css/style.css
+++ b/SuperWriters/assets/css/style.css
@@ -1,7 +1,11 @@
 
 
+.erra{
 
 
+  overflow: hidden;
+  vertical-align:center;
+}
 
 html, body * { box-sizing: border-box; font-family: 'Open Sans', sans-serif; }
 
@@ -22,12 +26,6 @@ overflow:hidden;
   background-size: cover;
 }
 
-.erra{
-
-
-  overflow: hidden;
-  vertical-align:center;
-}
 .container {
   width: 100%;
   padding-top: 60px;
@@ -35,7 +33,6 @@ overflow:hidden;
 }
 
 .frame {
-  height: 420px;
   width: 430px;
   background:
     -webkit-gradient(
@@ -132,12 +129,13 @@ li {
 
 .form-signin {
   width: 430px;
-  height: 375px;
 	font-size: 16px;
 	font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 35px;
+  padding-top: 5px;
+  padding-bottom:5px:
+   
   -webkit-transition: opacity .5s ease, -webkit-transform .5s ease;
   transition: opacity .5s ease, -webkit-transform .5s ease;
   transition: opacity .5s ease, transform .5s ease;
@@ -452,6 +450,8 @@ a.btn-signup:hover, a.btn-signin:hover {
 .disclaimer{
 	  color:#ffffff;
 	  font-size:small;
+   
+
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
