--- a/SuperWriters/assets/css/style.css
+++ b/SuperWriters/assets/css/style.css
@@ -1,16 +1,10 @@
 
 
-.erra{
 
 
-  overflow: hidden;
-  vertical-align:center;
-}
-
-html, body * { box-sizing: border-box; font-family: 'Open Sans', sans-serif; }
+html, body * { box-sizing: border-box; font-family: 'Open Sans', sans-serif; /*! margin-top: 8px; */}
 
 body {
-overflow:hidden;
   background:
     -webkit-gradient(
     linear,
@@ -28,8 +22,8 @@ overflow:hidden;
 
 .container {
   width: 100%;
-  padding-top: 60px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 60px;
 }
 
 .frame {
@@ -50,7 +44,7 @@ overflow:hidden;
   margin-left: auto;
   margin-right: auto;
   border-top: solid 1px rgba(255,255,255,.5);
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
   overflow: hidden;
   -webkit-transition: all .5s ease;
@@ -58,10 +52,19 @@ overflow:hidden;
 }
 
 .frame-long {
-  height: 615px;
+  height: 510px;
   
 }
-
+.reg{
+	color:#fff;
+	font-size: 22px;
+	font-weight: 700;
+}
+.reg2{
+	color:#fff;
+	font-size: 14px;
+	font-weight: 500;
+}
 .frame-short {
   height: 400px;
   margin-top: 50px;
@@ -133,7 +136,7 @@ li {
 	font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 5px;
+  /*! padding-top: 5px; */
   padding-bottom:5px:
    
   -webkit-transition: opacity .5s ease, -webkit-transform .5s ease;
@@ -236,10 +239,10 @@ li {
 
 label {
   font-weight: 400;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 13px;
   padding-left: 15px;
-  padding-bottom: 10px;
+  /*! padding-bottom: 10px; */
   color: rgba(255,255,255,.7);
   display: block;
 }
@@ -304,7 +307,7 @@ label {
 
 /* on checked */
 [type="checkbox"]:checked + label:before {
-  background: #0F4FE6; 
+  background: #007bff; 
 }
 
 [type="checkbox"]:checked + label:after {
@@ -361,26 +364,29 @@ label {
 
 .btn-signin {
   float: left;
- 
+   font-size: 18px;
+
   width: 100%;
   height: 35px;
 	border: none;
 	border-radius: 20px;
- 
+   font-weight: 700;
     background: rgba(255,255,255, 1);
 
 }
 .header{
-	background: #d4dedf; 
+	background: #007bff; 
 	border-radius: 5px;
 	padding: 5px;
-  margin-bottom:25px;
+  margin-bottom:15px;
+  text-align:center;
+	border-bottom: 1px solid #fff;
 }
  .footer {
-	padding: 25px 30px 40px 30px;
+	padding: 25px 30px 25px 30px;
 	overflow: auto;
 	
-	background: #d4dedf;
+	background: #007bff;
 	border-top: 1px solid #fff;
 	
 	box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
@@ -394,7 +400,7 @@ label {
   text-transform: uppercase;
   font-size: 13px;
   text-align: center;
-margin-top: 8px;
+/*! margin-top: 8px; */
  
  margin-right: 25%;
   width: 40%;
@@ -454,7 +460,7 @@ a.btn-signup:hover, a.btn-signin:hover {
 
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: wrap;
     display: block; 
 
 }
@@ -534,14 +540,14 @@ a.btn-signup:hover, a.btn-signin:hover {
 h1 {
   color: #ffffff;
   font-size: 35px;
-	font-weight: 300;
+	font-weight: 700;
   text-align: center;
 }
 
 h3 {
   color: #ffffff;
   font-size: 25px;
-	font-weight: 300;
+	font-weight: 500;
   text-align: center;
 }
 
